PR kern/40027 pagedaemon loops on memory shortage

uvm_swapisfull: don't count some small portion as it may be inaccessible to
us at any given moment, for example if there is lock contention or if pages
are busy.